Refs #2792 fix bugs @1024: horizontal scroll appeared, links on dataset boxes were on 2 rows

--- a/scoreboard/theme/static/css/custom.css
+++ b/scoreboard/theme/static/css/custom.css
@@ -1131,6 +1131,10 @@ div.field span.required:after {
   .editor-current-step select {
     width: 240px;
   }
+
+  .navigation-widget .container {
+    width: 965px;
+  }
 }
 
 @media (min-width: 1024px) {
